// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should render with a label 1`] = `
<ng-ais-toggle
  cx={[Function Function]}
  label={[Function String]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
  values={[Function Object]}
>
  
      <div
    class="ais-Toggle"
  >
    
        
    <ng-ais-header
      ng-reflect-class-name="ais-Toggle-header ais-header"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-Toggle-body ais-body"
    >
      
          
      <ul
        class="ais-Toggle-list"
      >
        
            
        <li
          class="ais-Toggle-item"
        >
          
              
          <label
            class="ais-Toggle-label"
          >
            
                
            <input
              class="ais-Toggle-checkbox"
              type="checkbox"
            />
            
                Foo Label
                
            <span
              class="ais-Toggle-count"
            >
              
                  666
                
            </span>
            
              
          </label>
          
            
        </li>
        
          
      </ul>
      
        
    </div>
    
  
        
    <ng-ais-footer
      ng-reflect-class-name="ais-Toggle-footer ais-footer"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-toggle>
`;

exports[`Toggle should render with state 1`] = `
<ng-ais-toggle
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
  values={[Function Object]}
>
  
      <div
    class="ais-Toggle"
  >
    
        
    <ng-ais-header
      ng-reflect-class-name="ais-Toggle-header ais-header"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-Toggle-body ais-body"
    >
      
          
      <ul
        class="ais-Toggle-list"
      >
        
            
        <li
          class="ais-Toggle-item"
        >
          
              
          <label
            class="ais-Toggle-label"
          >
            
                
            <input
              class="ais-Toggle-checkbox"
              type="checkbox"
            />
            
                foobar
                
            <span
              class="ais-Toggle-count"
            >
              
                  666
                
            </span>
            
              
          </label>
          
            
        </li>
        
          
      </ul>
      
        
    </div>
    
  
        
    <ng-ais-footer
      ng-reflect-class-name="ais-Toggle-footer ais-footer"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-toggle>
`;

exports[`Toggle should render without state 1`] = `
<ng-ais-toggle
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
  values={[Function Object]}
>
  
      <div
    class="ais-Toggle"
  >
    
        
    <ng-ais-header
      ng-reflect-class-name="ais-Toggle-header ais-header"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-Toggle-body ais-body"
    >
      
          
      <ul
        class="ais-Toggle-list"
      >
        
            
        <li
          class="ais-Toggle-item"
        >
          
              
          <label
            class="ais-Toggle-label"
          >
            
                
            <input
              class="ais-Toggle-checkbox"
              type="checkbox"
            />
            
                
                
            <span
              class="ais-Toggle-count"
            >
              
                  
                
            </span>
            
              
          </label>
          
            
        </li>
        
          
      </ul>
      
        
    </div>
    
  
        
    <ng-ais-footer
      ng-reflect-class-name="ais-Toggle-footer ais-footer"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-toggle>
`;
